--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
 		"esbuild": "^0.25.5",
 		"express": "^5.1.0",
 		"typescript": "^5.8.3",
-		"wisp-server-node": "^1.1.7",
-		"ws": "^8.18.0"
+		"uuid": "^11.1.0",
+		"wisp-server-node": "^1.1.7"
 	},
 	"dependencies": {
 		"@mercuryworkshop/bare-mux": "^2.1.7",
+		"@mercuryworkshop/scramjet": "https://github.com/MercuryWorkshop/scramjet/releases/download/latest/mercuryworkshop-scramjet-2.0.0-alpha.tgz",
 		"@titaniumnetwork-dev/ultraviolet": "^3.2.10",
 		"comlink": "^4.4.2",
 		"jszip": "^3.10.1",
 		"libcurl.js": "^0.7.1",
 		"mime": "^4.0.7",
-		"uuid": "^11.1.0"
+		"ws": "^8.18.0"
 	}
 }
