--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -30,7 +30,10 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: 9
+
+      - name: Check pnpm version
+        run: pnpm --version
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -131,7 +134,10 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: 9
+
+      - name: Check pnpm version
+        run: pnpm --version
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
