--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -13,10 +13,6 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: pages
-  cancel-in-progress: false
-
 jobs:
   build:
     name: Build (verify)
@@ -65,63 +61,45 @@ jobs:
           retention-days: 7
 
   release:
-    name: Create Release (push only)
+    name: Create/Update Main Release
     needs: build
-    if: github.event_name == 'push' && (github.ref_type != 'tag' || startsWith(github.ref, 'refs/tags/v'))
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
           name: xenos-build
-
-      - name: Derive release metadata
-        id: meta
+      - name: Force tag 'main' to this commit
         run: |
-          SHORT_SHA=${GITHUB_SHA::7}
-          if [[ "${GITHUB_REF}" == refs/tags/v* ]]; then
-            TAG_NAME="${GITHUB_REF_NAME}"
-            NAME="XenOS ${GITHUB_REF_NAME}"
-            PRERELEASE=false
-            KIND="Versioned"
-          else
-            TAG_NAME="auto-${SHORT_SHA}"
-            NAME="XenOS build ${SHORT_SHA}"
-            PRERELEASE=true
-            KIND="Automated"
-          fi
-          echo "tag_name=${TAG_NAME}" >> $GITHUB_OUTPUT
-          echo "release_name=${NAME}" >> $GITHUB_OUTPUT
-          echo "prerelease=${PRERELEASE}" >> $GITHUB_OUTPUT
-          echo "kind=${KIND}" >> $GITHUB_OUTPUT
-          echo "## ${NAME}" > release-notes.md
-          echo "" >> release-notes.md
-          echo "Type: ${KIND}" >> release-notes.md
-          echo "Commit: \`${GITHUB_SHA}\`" >> release-notes.md
-          echo "Ref: \`${GITHUB_REF_NAME}\`" >> release-notes.md
+          git init -q
+          git remote add origin $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
+          git fetch --depth=1 origin $GITHUB_SHA
+          git checkout -q $GITHUB_SHA
+          git tag -f main $GITHUB_SHA
+          git push origin :refs/tags/main || true
+          git push origin refs/tags/main
+      - name: Generate release notes
+        run: |
+          echo "Commit: ${GITHUB_SHA}" > release-notes.md
+          echo "Ref: main" >> release-notes.md
           echo "Built: $(date -u '+%Y-%m-%d %H:%M:%S UTC')" >> release-notes.md
-          echo "" >> release-notes.md
-          echo "### Installation" >> release-notes.md
-          echo "1. Download \`xenos-build.zip\`" >> release-notes.md
-          echo "2. Extract the archive" >> release-notes.md
-          echo "3. Serve with any static file server (e.g. \`npx serve\`, \`python -m http.server\`)" >> release-notes.md
-          echo "4. Open in browser" >> release-notes.md
 
       - name: Publish GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ steps.meta.outputs.tag_name }}
-          name: ${{ steps.meta.outputs.release_name }}
+          tag_name: main
+          name: XenOS main
           body_path: release-notes.md
           files: |
             xenos-build.zip
           draft: false
-          prerelease: ${{ steps.meta.outputs.prerelease }}
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   docs:
-    name: Build Typedoc
+    name: Build & Package TypeDoc
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -136,9 +114,6 @@ jobs:
         with:
           version: 9
 
-      - name: Check pnpm version
-        run: pnpm --version
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -151,15 +126,21 @@ jobs:
       - name: Generate TypeDoc site
         run: pnpm typedoc
 
-      - name: Upload docs artifact
+      - name: Prepare docs publish dir
+        run: |
+          mkdir -p site
+          if [ -d docs ]; then mkdir -p site/api && cp -R docs/* site/api/; fi
+          if [ ! -f site/index.html ]; then echo '<meta http-equiv="refresh" content="0; url=api/index.html" />' > site/index.html; fi
+
+      - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs
+          path: site
 
   deploy-docs:
-    name: Deploy Docs to Pages
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    name: Deploy TypeDoc to Pages
     needs: docs
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
